--- a/bower.json
+++ b/bower.json
@@ -13,11 +13,8 @@
   ],
   "dependencies": {
     "angular": ">= 1.2.0",
-    "gridstack": "*",
-    "lodash": ">= 3.5.0",
-    "jquery": ">= 1.11.0",
-    "jquery-ui": ">= 1.11.0"
-  },  
+    "gridstack": "~0.2.3"
+  },
   "license": "MIT",
   "ignore": [
     "**/.*",
