--- a/package.json
+++ b/package.json
@@ -6,7 +6,12 @@
   "dependencies": {
     "gulp": "^3.9.0"
   },
-  "devDependencies": {},
+  "devDependencies": {
+    "gulp-clean": "^0.3.1",
+    "gulp-concat": "^2.6.0",
+    "gulp-jshint": "^1.11.2",
+    "gulp-uglify": "^1.4.0"
+  },
   "repository": {
     "type": "git",
     "url": "https://github.com/Tropicalista/angular-gridstack.git"
