--- a/package.json
+++ b/package.json
@@ -1,10 +1,11 @@
 {
   "name": "angular-gridstack",
-  "version": "0.1.0",
+  "version": "0.1.1",
   "description": "An angular directive for gridstack.js",
   "main": "src/angular-gridstack.js",
   "dependencies": {
-    "gulp": "^3.9.0"
+    "gulp": "^3.9.0",
+    "gulp-header": "^1.7.1"
   },
   "devDependencies": {
     "gulp-clean": "^0.3.1",
